--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Portfolio - Reni Fatarina</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/logo.png" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
