--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li> -->
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
                         </ul>
@@ -46,7 +46,7 @@
                                 <!-- <div class="fs-3 fw-light text-muted">I can help your business to</div> -->
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Your Partner for Data-First AI Solutions</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
+                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="https://drive.google.com/file/d/11M8ZZs4uj7Dvvur5-8_lNWgZ2kana_zN/view?usp=sharing" target="_blank">Resume</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
                                 </div>
                             </div>
@@ -184,7 +184,7 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Reni Fatarina Handayani.</p>
-                                <p class="text-muted">Reni is a student with a strong interest in Artificial Intelligence and Data Science. She has strong skills in data analysis, data visualization, as well as designing and implementing effective machine learning and deep learning models. Able to articulate analytical findings clearly and possess exceptional critical thinking and problem solving skills.</p>
+                                <p class="text-muted">Reni is a student with a strong interest in Machine Learning. She has honed her skills in data analysis, data visualization, and the development of effective machine learning models, including K-Means, Naive Bayes, KNN, Linear Regression, Decision Trees, Neural Networks, CNN, and LSTM. Her profound expertise in this field makes her an excellent choice for data analysis and machine learning tasks.</p>
                                 <h4 class="pt-4">Get in touch with me</h4>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
