--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li> -->
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
                         </ul>
@@ -57,6 +57,19 @@
                             </div>
                             <!-- Project Card 2-->
                             <div class="card overflow-hidden shadow rounded-4 border-0">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">Image Classification</h2>
+                                            <p>Classification of rock paper scissors images using image augmentation and model creation processes with CNN using TensorFlow</p>
+                                            <a href="https://github.com/renifatarina/Supervised-Unsupervised-Learning/blob/main/Project/Klasifikasi_Gambar_RockPaperScissors.ipynb">Link</a>
+                                        </div>
+                                        <img class="img-fluid" src="./assets/classification.jpg" width="350px" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 3-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mt-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
