--- a/projects.html
+++ b/projects.html
@@ -40,44 +40,33 @@
                     <div class="text-center mb-5">
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
                     </div>
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                    <div class="row gx-5 justify-content-center d-flex align-items-stretch">
+                        <div class="col-lg-6 col-xl-4 col-xxl-4">
                             <!-- Project Card 1-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5 h-100">
                                 <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">CANCERWISE</h2>
-                                            <p>CANCERWISE is an early prediction system for lung cancer. This prediction was made with TensorFlow and uses the Artificial Neural Network method. Predictions are made based on the symptoms felt by the patient.</p>
-                                            <a href="https://github.com/renifatarina/cancerwise">Link</a>
+                                    <div class="">
+                                        <div class="p-5 text-center">
+                                            <a class="text-decoration-none" href="data-analyst.html">
+                                                <i class="bi bi-clipboard-data" style="font-size: 3rem;"></i>
+                                                <h2 class="fw-bolder">Data Analyst</h2>
+                                            </a>
                                         </div>
-                                        <img class="img-fluid" src="./assets/cancerwise.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4">
+                            <!-- Project Card 1-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5 h-100">
                                 <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Image Classification</h2>
-                                            <p>Classification of rock paper scissors images using image augmentation and model creation processes with CNN using TensorFlow</p>
-                                            <a href="https://github.com/renifatarina/Supervised-Unsupervised-Learning/blob/main/Project/Klasifikasi_Gambar_RockPaperScissors.ipynb">Link</a>
+                                    <div class="">
+                                        <div class="p-5 text-center">
+                                            <a class="text-decoration-none" href="machine-learning.html">
+                                                <i class="bi bi-laptop" style="font-size: 3rem;"></i>
+                                                <h2 class="fw-bolder">Data Scientist & ML</h2>
+                                            </a>
                                         </div>
-                                        <img class="img-fluid" src="./assets/classification.jpg" width="350px" alt="..." />
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Project Card 3-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mt-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Clustering COVID-19 in China</h2>
-                                            <p>Application of the Agglomerative Hierarchical Clustering Algorithm to Group Data on Covid-19 Death Cases in China</p>
-                                            <a href="https://github.com/renifatarina/Supervised-Unsupervised-Learning/blob/main/Project/Penerapan%20Algoritma%20Agglomerative%20Hierarchical%20Clustering.ipynb">Link</a>
-                                        </div>
-                                        <img class="img-fluid" src="./assets/cluster.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
