--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <img src="./assets/logo.png" alt="" width=100>
                     <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Reni Fatarina</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -42,9 +41,9 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Artificial Intelligence &middot; Data Science &middot; Developer</div></div>
+                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Data Analyst &middot; Data Science &middot; Machine Learning</div></div>
                                 <!-- <div class="fs-3 fw-light text-muted">I can help your business to</div> -->
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Your Partner for Data-First AI Solutions</span></h1>
+                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I am <br>Reni Fatarina</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="https://drive.google.com/file/d/1jk7IK9jcwiEOAunww3oFtmy-iTj1gPJ0/view?usp=sharing" target="_blank">Resume</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
@@ -183,8 +182,8 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">My name is Reni Fatarina Handayani.</p>
-                                <p class="text-muted">Reni is a student with a strong interest in Machine Learning. She has honed her skills in data analysis, data visualization, and the development of effective machine learning models, including K-Means, Naive Bayes, KNN, Linear Regression, Decision Trees, Neural Networks, CNN, and LSTM. Her profound expertise in this field makes her an excellent choice for data analysis and machine learning tasks.</p>
+                                <p class="lead fw-light mb-4">My name is Reni Fatarina Handayani</p>
+                                <p class="text-muted">Reni is an Informatics student, known as a hardworking person who enjoys learning new things interested in big data. Aspiring to work in roles related to data analysis, data science, and machine learning. Possesses one year of experience in big data, specializing in data analysis, data visualization, and the development of machine learning models.</p>
                                 <h4 class="pt-4">Get in touch with me</h4>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
