edit summary and title

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -40,7 +40,7 @@
                     <div class="ms-5 mb-5">
                         <h1 class="display-5 fw-bolder mb-0">
                             <a href="projects.html"><i class="bi bi-caret-left-fill"></i></a>
-                            <span class="text-gradient d-inline">Data Analyst</span>
+                            <span class="text-gradient d-inline">Data & Analysis</span>
                         </h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
