--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                                         <div class="p-5 text-center">
                                             <a class="text-decoration-none" href="data-analyst.html">
                                                 <i class="bi bi-clipboard-data" style="font-size: 3rem;"></i>
-                                                <h2 class="fw-bolder">Data Analyst</h2>
+                                                <h2 class="fw-bolder">Data & Analysis</h2>
                                             </a>
                                         </div>
                                     </div>
