--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Reni Fatarina Handayani</p>
-                                <p class="text-muted">Reni is an Informatics student, known as a hardworking person who enjoys learning new things interested in big data. Aspiring to work in roles related to data analysis, data science, and machine learning. Possesses one year of experience in big data, specializing in data analysis, data visualization, and the development of machine learning models.</p>
+                                <p class="text-muted">Reni is an Informatics student, known as a hardworking person who enjoys learning new things interested in big data. Aspiring to work in roles related to data product manager, data analysis, data science, and machine learning. Possesses one year of experience in big data, specializing in data analysis, data visualization, and the development of machine learning models.</p>
                                 <h4 class="pt-4">Get in touch with me</h4>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
