add new projects and revision

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -57,7 +57,7 @@
                                             <ul>
                                                 <li>SpreadSheet</li>
                                             </ul>
-                                            <a href="https://docs.google.com/spreadsheets/d/1uwWevZF0BZTBAAMwf5WLo4wpixG5iHYJA7QPsKez3-M/edit?usp=sharing">Link Project</a>
+                                            <a href="https://docs.google.com/spreadsheets/d/1uwWevZF0BZTBAAMwf5WLo4wpixG5iHYJA7QPsKez3-M/edit?usp=sharing" target="_blank">Link Project</a>
                                         </div>
                                         <img class="img-fluid" src="./assets/da1.jpg" width="350px" alt="..." />
                                     </div>
@@ -77,9 +77,9 @@
                                                 <li>SQL</li>
                                                 <li>Looker Studio</li>
                                             </ul>
-                                            <a href="https://lookerstudio.google.com/reporting/3b31537f-2ee7-4440-94cb-4c380fc7702e">Link Project Looker Studio</a>
+                                            <a href="https://lookerstudio.google.com/reporting/3b31537f-2ee7-4440-94cb-4c380fc7702e" target="_blank">Link Project Looker Studio</a>
                                             <br>
-                                            <a href="https://console.cloud.google.com/bigquery?sq=23939611476:c5e34cfb4d524397862d2da3ff0c3108">Link Project BigQuery</a>
+                                            <a href="https://console.cloud.google.com/bigquery?sq=23939611476:c5e34cfb4d524397862d2da3ff0c3108" target="_blank">Link Project BigQuery</a>
                                         </div>
                                         <img class="img-fluid" src="./assets/da3.jpg" width="350px" alt="..." />
                                     </div>
@@ -98,9 +98,9 @@
                                                 <li>Google Colab</li>
                                                 <li>Python</li>
                                             </ul>
-                                            <a href="https://drive.google.com/file/d/1-zm1eItlkxyVBTvv1KO5kACBOzEtZ7T3/view?usp=sharing">Link Project Presentation</a>
+                                            <a href="https://drive.google.com/file/d/1-zm1eItlkxyVBTvv1KO5kACBOzEtZ7T3/view?usp=sharing" target="_blank">Link Project Presentation</a>
                                             <br>
-                                            <a href="https://github.com/renifatarina/Clustering_Kmeans/blob/main/FP_Reni.ipynb">Link Project IPYNB</a>
+                                            <a href="https://github.com/renifatarina/Clustering_Kmeans/blob/main/FP_Reni.ipynb" target="_blank">Link Project IPYNB</a>
                                         </div>
                                         <img class="img-fluid" src="./assets/da2.jpg" width="350px" alt="..." />
                                     </div>
