--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Data Analyst &middot; Data Science &middot; Machine Learning</div></div>
+                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">System Analyst &middot; Data Analyst &middot; Data Science &middot; Machine Learning</div></div>
                                 <!-- <div class="fs-3 fw-light text-muted">I can help your business to</div> -->
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I am <br>Reni Fatarina</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
@@ -183,7 +183,7 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Reni Fatarina Handayani</p>
-                                <p class="text-muted">Reni is an Informatics student, known as a hardworking person who enjoys learning new things interested in big data. Aspiring to work in roles related to data product manager, data analysis, data science, and machine learning. Possesses one year of experience in big data, specializing in data analysis, data visualization, and the development of machine learning models.</p>
+                                <p class="text-muted">Reni, an Informatics student, is recognized for her diligent work ethic and passion for ongoing learning, especially in the field of system analysis and big data. Aspiring for roles in system analysis, data analyst, data science, and machine learning, Reni actively contributed to key documents, such as SRS, use case models, and activity diagrams during her six-month internship. Moreover, she has honed skills in analysis, visualization, and machine learning development with one year of specialized big data experience.</p>
                                 <h4 class="pt-4">Get in touch with me</h4>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
