--- a/system-analyst.html
+++ b/system-analyst.html
@@ -40,7 +40,7 @@
                     <div class="ms-5 mb-5">
                         <h1 class="display-5 fw-bolder mb-0">
                             <a href="projects.html"><i class="bi bi-caret-left-fill"></i></a>
-                            <span class="text-gradient d-inline">Data Scientist & Machine Learning</span>
+                            <span class="text-gradient d-inline">System Analyst</span>
                         </h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
@@ -50,41 +50,26 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Individual Exploration Project</div></div>
-                                            <h2 class="fw-bolder">CANCERWISE</h2>
-                                            <p>An early prediction system for lung cancer based on the symptoms felt by the patient.</p>
-                                            <p>Tools & Tech:</p>
-                                            <ul>
-                                                <li>Google Colab</li>
-                                                <li>Pycharm</li>
-                                                <li>Python</li>
-                                                <li>TensorFlow (ANN Method)</li>
-                                                <li>Flask</li>
-                                                <li>HTML & CSS</li>
-                                            </ul>
-                                            <a href="https://github.com/renifatarina/cancerwise" target="_blank">Link Project</a>
+                                            <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Case Based Project</div></div>
+                                            <h2 class="fw-bolder">SRS Wismakagama</h2>
+                                            <p>The Wisma Kagama website is a platform designed for hotel room booking reservations. I created technical documentation, UML diagrams, established schedules, and conducted testing.</p>
+                                            <a href="https://drive.google.com/file/d/1Wmy5Mn3qBckRS4zAykC3u67NK7Cpu-Tj/view?usp=sharing" target="_blank">Link Project</a>
                                         </div>
-                                        <img class="img-fluid" src="./assets/cancerwise.png" alt="..." />
+                                        <!-- <img class="img-fluid" src="./assets/da1.jpg" width="350px" alt="..." /> -->
                                     </div>
                                 </div>
                             </div>
                             <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                            <div class="card overflow-hidden shadow rounded-4 border-0 ">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Skill Based Project</div></div>
-                                            <h2 class="fw-bolder">Image Classification</h2>
-                                            <p>Classification of rock paper scissors images using image augmentation and model creation processes with CNN using TensorFlow</p>
-                                            <p>Tools & Tech:</p>
-                                            <ul>
-                                                <li>Google Colab</li>
-                                                <li>Python</li>
-                                                <li>TensorFlow (CNN Method)</li>
-                                            </ul>
-                                            <a href="https://github.com/renifatarina/Supervised-Unsupervised-Learning/blob/main/Project/Klasifikasi_Gambar_RockPaperScissors.ipynb" target="_blank">Link Project</a>
+                                            <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Case Based Project</div></div>
+                                            <h2 class="fw-bolder">SRS UGM Mall</h2>
+                                            <p>UGM Mall website is a platform marketplace designed for UMKM. I created technical documentation, UML diagrams, and established schedules.</p>
+                                            <a href="https://drive.google.com/file/d/11tv_EFfgnq4mdHZCvYgSXZCcVbr6d-9W/view?usp=sharing" target="_blank">Link Project</a>
                                         </div>
-                                        <img class="img-fluid" src="./assets/classification.jpg" width="350px" alt="..." />
+                                        <!-- <img class="img-fluid" src="./assets/da3.jpg" width="350px" alt="..." /> -->
                                     </div>
                                 </div>
                             </div>
@@ -93,17 +78,12 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Skill Based Project</div></div>
-                                            <h2 class="fw-bolder">Clustering COVID-19 in China</h2>
-                                            <p>Application of the Agglomerative Hierarchical Clustering Algorithm to Group Data on Covid-19 Death Cases in China</p>
-                                            <p>Tools & Tech:</p>
-                                            <ul>
-                                                <li>Google Colab</li>
-                                                <li>Python</li>
-                                            </ul>
-                                            <a href="https://github.com/renifatarina/Supervised-Unsupervised-Learning/blob/main/Project/Penerapan%20Algoritma%20Agglomerative%20Hierarchical%20Clustering.ipynb" target="_blank">Link Project</a>
+                                            <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Case Based Project</div></div>
+                                            <h2 class="fw-bolder">SRS Sinatra Borobudur</h2>
+                                            <p>Sinatra Borobudur website is a platform designed for vacation in Yogyakarta. I created technical documentation, UML diagrams, established schedules, and conducted testing.</p>
+                                            <a href="https://drive.google.com/file/d/1LXD2TrAKXi-OPm6J0L5PjwCCwZMV1a5G/view?usp=sharing" target="_blank">Link Project</a>
                                         </div>
-                                        <img class="img-fluid" src="./assets/cluster.png" alt="..." />
+                                        <!-- <img class="img-fluid" src="./assets/da2.jpg" width="350px" alt="..." /> -->
                                     </div>
                                 </div>
                             </div>
