--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,21 @@
                                 <div class="card-body p-0">
                                     <div class="">
                                         <div class="p-5 text-center">
+                                            <a class="text-decoration-none" href="system-analyst.html">
+                                                <i class="bi bi-clipboard-data" style="font-size: 3rem;"></i>
+                                                <h2 class="fw-bolder">System Analyst</h2>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-xl-4 col-xxl-4">
+                            <!-- Project Card 1-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5 h-100">
+                                <div class="card-body p-0">
+                                    <div class="">
+                                        <div class="p-5 text-center">
                                             <a class="text-decoration-none" href="data-analyst.html">
                                                 <i class="bi bi-clipboard-data" style="font-size: 3rem;"></i>
                                                 <h2 class="fw-bolder">Data & Analysis</h2>
