edit index and ml page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li> -->
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="machine-learning.html">Projects</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
                         </ul>
                     </div>
@@ -46,7 +46,7 @@
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I am <br>Reni Fatarina</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <!-- <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="https://drive.google.com/file/d/1RFs01Ri356fSl2kbSaMRFQ01KGw0EIiQ/view?usp=sharing" target="_blank">Resume</a> -->
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="machine-learning.html">Projects</a>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Reni Fatarina Handayani</p>
                                 <p class="text-muted">v
-                                    Reni is a Bachelor's Informatics student at Amikom Yogyakarta University, graduating from Bangkit Academy's 2023 Batch 1 in the Machine Learning path. Aspiring to roles in Data Analyst, Data Science, AI Engineer, or System Analyst, she has over 1 year of hands-on experience in Machine Learning and Software Analysis. Proficient in Python, TensorFlow, SQL, BigQuery, and Looker Studio, Reni has spearheaded the development of three enterprise-level software systems, showcasing expertise in designing ERDs, UML diagrams, activity diagrams, and SRS documents.</p>
+                                    Reni is a fresh graduate with a Bachelor's degree in Informatics from Amikom Yogyakarta University. She is a graduate of Bangkit Academy's 2023 Batch 1 in the Machine Learning path. Aspiring to roles as an Artificial Intelligence Engineer or Machine Learning Engineer, Reni is a career switcher who has transitioned into the tech industry with over one year of hands-on experience in Machine Learning. She is proficient in Python, Flask, TensorFlow, Keras, SQL, and Langchain.</p>
                                 <h4 class="pt-4">Get in touch with me</h4>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
