--- a/machine-learning.html
+++ b/machine-learning.html
@@ -37,14 +37,34 @@
             <!-- Projects Section-->
             <section class="py-5">
                 <div class="container px-5 mb-5">
-                    <div class="ms-5 mb-5">
+                    <!-- <div class="ms-5 mb-5">
                         <h1 class="display-5 fw-bolder mb-0">
                             <a href="projects.html"><i class="bi bi-caret-left-fill"></i></a>
                             <span class="text-gradient d-inline">Data Scientist & Machine Learning</span>
                         </h1>
-                    </div>
+                    </div> -->
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <!-- Project Card 0-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Company Project</div></div>
+                                            <h2 class="fw-bolder">LANGCHAIN PROJECT</h2>
+                                            <p>Developed a series of Langchain-based projects, including document translation with similarity checking, chatbot creation with Buffer and Summary Memory, and document-specific Q&A bots. Additionally, created chatbots that answer questions based on document headers and automated generation of multiple-choice and short essay questions.</p>
+                                            <p>Tools & Tech:</p>
+                                            <ul>
+                                                <li>Pycharm</li>
+                                                <li>Python</li>
+                                                <li>Langchain</li>
+                                                <li>Flask</li>
+                                            </ul>
+                                            <a href="https://github.com/renifatarina/LangchainProject" target="_blank">Link Project</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- Project Card 1-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
