--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">System Analyst &middot; Data Analyst &middot; Data Science &middot; Machine Learning &middot; AI</div></div>
+                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Machine Learning &middot; AI &middot;Data Science</div></div>
                                 <!-- <div class="fs-3 fw-light text-muted">I can help your business to</div> -->
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I am <br>Reni Fatarina</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
